# classad-xrootd-mapping

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindBoost.cmake  FindClassad.cmake  FindXrootd.cmake
src/: CMakeLists.txt  classad_sample.txt  classad_sample_notfound.txt  classad_sample_popular.txt  pthread_utils.h  response_cache.cpp  response_cache.h  test_main.cpp  xrootd_client.cpp  xrootd_client.h  xrootd_mapping.cpp
